# copperspice-dialog-example

./: README.md
src/: CMakeLists.txt
src/src/: CMakeLists.txt  dialogtest.cpp  dialogtest.h  dialogtest.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
